larger font on mobile + fix button styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -247,20 +247,21 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-size: 16px;
+  font-size: 18px;
   background-color: transparent;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-@media only screen and (max-width: 1025px) {
-  input,
-  .ms-TextField-field,
-  .ms-ComboBox-Input,
-  .ms-ChoiceField-input {
-    font-size: 1rem;
+
+@media only screen and (min-width: 1024px) {
+  html,
+  body{
+    font-size: 16px;
   }
 }
+
+
 
 html {
   overflow: auto;
